<resources>
    <string name="app_name">Receipt Saver</string>
    <string name="pref_themes">Themes</string>
    <string name="pref_font">Font</string>
    <string name="pref_currency">Currency</string>
    <string name="pref_select_theme">Select a Theme</string>
    <string name="pref_select_font">Select a Font</string>
    <string name="pref_select_currency">Select a Currency</string>
    <string name="pref_theme_default">Light</string>
    <string name="pref_currency_default">Dollar</string>
    <string name="pref_font_default">Casual</string>
    <string name="settings">Settings</string>
    <string name="name">Name of Receipt:</string>
    <string name="name_prompt">Enter name of receipt</string>
    <string name="total">Total:</string>
    <string name="category">Category:</string>
    <string name="date">Date (mm/dd/yy):</string>
    <string name="description">Description:</string>
    <string name="picture">Take a picture</string>
    <string name="save">Save</string>
    <string name="add">Add a Receipt:</string>
    <string name="delete">Delete a Receipt:</string>
    <string name="email">Email:</string>
    <string name="app_key">butp5kslqn3b1ex</string>


    <string name="dollar">$</string>
    <string name="euro">€</string>



    <string-array name="action_list">
        <item>Favorites</item>
    </string-array>

    <string-array name="pref_themes_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_currency_entries">
        <item>Dollar</item>
        <item>Euro</item>
    </string-array>

    <string-array name="pref_font_entries">
        <item>Casual</item>
        <item>Cursive</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="category_prompt">Enter category of receipt</string>
    <string name="total_prompt">Enter total of receipt</string>
    <string name="description_prompt">Enter description of receipt</string>
    <string name="favorite_list">Favorite</string>
    <string name="action_home">Home</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email_prompt">Enter email adress</string>
    <string name="password">Password:</string>
    <string name="password_prompt">Enter Password</string>
    <string name="logIn">DropBox Sign In</string>
    <string name="DropBoxInfo">Use your DropBox \n account to upload your \n receipts</string>
    <string name="notLoggedIn">Not Signed Into DropBox</string>
    <string name="version">Version 1.0</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>


</resources>
