<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_theme_default"
        android:dialogTitle="@string/pref_select_theme"
        android:entries="@array/pref_themes_entries"
        android:entryValues="@array/pref_themes_entries"
        android:key="pref_syncTheme"
        android:title="@string/pref_themes" />

    <ListPreference
        android:defaultValue="@string/pref_font_default"
        android:dialogTitle="@string/pref_select_font"
        android:entries="@array/pref_font_entries"
        android:entryValues="@array/pref_font_entries"
        android:key="pref_syncFont"
        android:title="@string/pref_font" />

    <ListPreference
        android:defaultValue="@string/pref_currency_default"
        android:dialogTitle="@string/pref_select_currency"
        android:entries="@array/pref_currency_entries"
        android:entryValues="@array/pref_currency_entries"
        android:key="pref_syncCurrency"
        android:title="@string/pref_currency" />


</PreferenceScreen>