<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/dropboxInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DropBoxInfo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email_prompt"
                android:inputType="text"
                tools:ignore="TextFields" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password_prompt"
                android:inputType="text"
                tools:ignore="TextFields" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logIn" />
    </LinearLayout>

</LinearLayout>