<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".PreviewReceiptFragment">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/categoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/category"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/totalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/descriptionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/receiptImage"
        android:layout_width="300dp"
        android:paddingLeft="50dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/logo" />

</LinearLayout>